moved posts counter to avoid overlapping when no user description/location/url is present

--- a/css/profile.css
+++ b/css/profile.css
@@ -172,7 +172,7 @@
 .profile-modal .profile-data
 {
     display: inline-block;
-    margin-left: -64px;
+    margin-left: -4px;
     border-bottom: 0;
 }
 .profile-modal .postboard
